--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.1",
+    "bootstrap": "5.1.1",
+    "dayjs": "^1.10.7",
+    "i18next": "^21.1.1",
     "next": "11.1.2",
+    "next-i18next": "^8.8.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-avatar": "^3.10.0",
+    "react-bootstrap": "^1.6.4",
+    "react-dom": "17.0.2",
+    "react-i18next": "^11.12.0",
+    "react-icons": "^4.2.0",
+    "react-use": "^17.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.24",
