--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
+    "@rtk-query/graphql-request-base-query": "^1.0.3",
     "bootstrap": "5.1.1",
     "dayjs": "^1.10.7",
+    "graphql": "^15.6.0",
+    "graphql-request": "^3.5.0",
     "i18next": "^21.1.1",
     "next": "11.1.2",
     "next-i18next": "^8.8.0",
@@ -20,8 +23,12 @@
     "react-bootstrap": "^1.6.4",
     "react-dom": "17.0.2",
     "react-i18next": "^11.12.0",
-    "react-icons": "^4.2.0",
-    "react-use": "^17.3.1"
+    "react-icons": "^4.3.1",
+    "react-pro-sidebar": "^0.7.1",
+    "react-redux": "^7.2.5",
+    "react-use": "^17.3.1",
+    "react-waypoint": "^10.1.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "17.0.24",
